# Apriorit_tasks

./: .gitignore  LICENSE  README.md
DriverProject/: Driver.c  DriverTest.c  HelloWorldDriver.vcxproj  Makefile
DriverTest/KMDF DriverHW/: KMDF DriverHW.sln
DriverTest/KMDF DriverHW/KMDF DriverHW/: Helloworld.c  KMDF DriverHW.vcxproj  KMDF DriverHW.vcxproj.filters  KMDFDriverHW.inf  messages.h
DriverTest/KMDF DriverHW/KMDF DriverHW/x64/Release/: KMDFDriverHW.sys.recipe
DriverTest/KMDF DriverHW/KMDF DriverHW/x64/Release/KMDF DriverHW.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+20 more)
DriverTest/KMDF DriverHW/x64/Release/: KMDFDriverHW.cer  KMDFDriverHW.inf
DriverTest/KMDF DriverHW/x64/Release/KMDF DriverHW/: KMDFDriverHW.sys  kmdfdriverhw.cat
Homework01/: Factory_method.cpp
Homework01(GraphicVersion)/: CsvRep.h  Factory_method.h  FileInfo.h  Homework1.docx  MainWindow.ui
Homework02/: CMakeCache.txt  Counter.cpp  cmake_install.cmake  main.cpp
Homework02/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Homework02/CounterExample_autogen/: deps  moc_predefs.h
Homework03/: HomeTask.pro  MainForm.qml  main.cpp  main.qml  qml.qrc
Homework04/: Homework4.docx  MyVector.hpp
Homework05/: Homework5.docx  main.cpp
Homework06/: main.cpp
Homework07/: Homework7.docx  functions.cpp  functions.h  main.cpp  tempCodeRunnerFile.cpp  test_main.cpp
Homework08/: Makefile  client.cpp
Homework1/: Factory_method.cpp  GetFiles.h  IRep.h  JsonRep.h  RepFactory.h
Homework1(GraphicVersion)/: CMakeLists.txt  Factory_method.cpp  Factory_method.h  MainWindow.cpp  MainWindow.h  TxtRep.h  main.cpp
Homework10/: Homework10.docx  main.cpp
Homework11/Task1/: Makefile  destination_file.txt  file_copy.c  file_copy.h  main.c
Homework11/Task2/: Makefile  child_process.c  output.txt  pipe_app.c
Homework12/: CMakeLists.txt  Homework12.docx
Homework12/Client/: CMakeLists.txt  main.cpp
Homework12/Server/: CMakeLists.txt  main.cpp
Homework2/: CMakeLists.txt  Counter.h  Homework2.txt  Makefile
Homework2/CounterExample_autogen/: mocs_compilation.cpp
Homework2/CounterExample_autogen/EWIEGA46WW/: moc_Counter.cpp  moc_Counter.cpp.d
Homework3/: Homework3.docx
Homework4/: MyVectorFixed.hpp  main.cpp
Homework5/: CustomSmartPointers.hpp
Homework6/: Homework6.docx  LinkedList.hpp
Homework7/: test_main.cpp
Homework8/: Homework8.txt  server.cpp
Homework9/: Homework9.docx  main.cpp
